11_gateway-api/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: my-app
  labels:
    app: my-app
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: my-app
      image: quay.io/kubermatic-labs/training-application:2.0.0
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
